# rythm-jump

./: .gitignore  .markdownlint-cli2.yaml  .stylelintrc.json  AGENTS.md  README.md  eslint.config.js  package-lock.json  package.json  pkg_resources.py  prek.toml  pyproject.toml  rythm_jump.toml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/rhythm_jump/: __init__.py  headless.py  main.py
backend/rhythm_jump/api/: charts.py  ws.py
backend/rhythm_jump/engine/: chart_loader.py  led_frames.py  scoring.py  session.py
backend/rhythm_jump/hw/: gpio_input.py
backend/rhythm_jump/models/: chart.py
backend/tests/: test_chart_validation.py  test_charts_api.py  test_debounce.py  test_gpio_input.py  test_headless_trigger.py  test_health.py  test_led_projection.py  test_scoring.py  test_session_modes.py  test_ws_events.py
docs/: backend-architecture.md  hardware-wiring.md  runbook-timing-repro.md  runbook.md
docs/plans/: 2026-03-03-rhythm-jump-design.md  2026-03-03-rhythm-jump-implementation.md  2026-03-04-arcade-font-design.md  2026-03-04-arcade-font-plan.md  2026-03-04-playback-sync-design.md  2026-03-04-playback-sync-plan.md  2026-03-04-retro-ui-design.md  2026-03-04-retro-ui-plan.md  2026-03-04-toxic-chart-design.md  2026-03-04-toxic-chart-plan.md  2026-03-04-tron-ui-design.md  2026-03-04-tron-ui-plan.md
rythm_jump/: audio_analysis.py  bootstrap.py  cli.py  compat.py  config.py  headless.py  main.py  presentation.py  song_library.py
rythm_jump/api/: __init__.py  charts.py  http.py  session_stream.py  ws.py
rythm_jump/engine/: __init__.py  chart_loader.py  io.py  led_frames.py  runtime.py  scoring.py  session.py  types.py
rythm_jump/hw/: __init__.py  audio_playback.py  gpio_input.py  led_output.py
rythm_jump/models/: __init__.py  chart.py
scripts/: __init__.py  debug_led_red.py  dev.sh  repro_led_timing.py  run_pi.sh
songs/demo/: chart.json
songs/toxic/: chart.json
systemd/: rhythm-jump.service
tests/: __init__.py  conftest.py  test_api_charts.py  test_app_nav_ui.py  test_auto_pattern_api.py  test_bootstrap.py  test_chart_audio_analysis_api.py  test_chart_validation.py  test_charts_api.py  test_cli.py  test_config.py  test_debounce.py  test_game_beatgrid_alignment_ui.py  test_game_debug_overlay_ui.py  test_game_led_bar_flash_ui.py  test_game_start_sync_ui.py  test_game_timing_summary_ui.py  test_game_waveform_alignment_fix_ui.py  test_game_waveform_sync_ui.py  test_gpio_input.py  test_headless_trigger.py  test_health.py  test_led_beat_feedback_ui.py  test_led_projection.py  test_manage_waveform_perf.py  test_scoring.py  test_session_modes.py  test_song_download_api.py  test_song_download_ui.py  test_visualizer_projection.js  test_waveform_zoom_ui.py  test_ws_duration.py  test_ws_events.py  test_ws_session.py  test_ws_timing.py
web/: app.js  game.js  index.html  manage.html  manage.js  package-lock.json  package.json  shared-ui.js  spectral-waveform.js  style.css  theme.js  tsconfig.json  visualizer-projection.js
web/src/: App.test.tsx  App.tsx
web/src/lib/: api.ts
web/src/test/: setup.ts
(+13 files in other folders)
