[project]
name = "rythm-jump"
version = "0.1.0"
description = "Rhythm Jump - A rhythm game with LED visualization"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    "uvicorn>=0.35.0,<1.0.0",
    "python-multipart>=0.0.12",
    "websockets>=14.0",
    "madmom>=0.16.1,<0.17.0",
    "setuptools>=69.0,<82.0",
]

[project.scripts]
dev = "rythm_jump.cli:dev"

[dependency-groups]
dev = [
    "codespell>=2.4.1",
    "httpx>=0.28.0,<1.0.0",
    "prek>=0.3.4",
    "pytest>=8.4.0,<9.0.0",
    "ruff>=0.15.4",
    "ty>=0.0.20",
    "requests>=2.32.5,<3.0.0",
    "playwright>=1.58.0,<2.0.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rythm_jump"]

[tool.uv.extra-build-dependencies]
madmom = ["Cython", "numpy"]
