[project]
name = "rythm-jump"
version = "0.1.0"
description = "Rhythm Jump - A rhythm game with LED visualization"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "python-multipart>=0.0.22",
    "websockets>=16.0",
    "librosa>=0.11.0",
    "setuptools>=82.0.0",
]

[project.scripts]
dev = "rythm_jump.cli:dev"

[dependency-groups]
dev = [
    "codespell>=2.4.1",
    "httpx>=0.28.1",
    "prek>=0.3.4",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
    "ty>=0.0.20",
    "requests>=2.32.5",
    "playwright>=1.58.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rythm_jump"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
all = "error"

[tool.ty.terminal]
error-on-warning = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213"]
per-file-ignores = { "tests/*.py" = ["S101", "D100", "D103"] }


[tool.pytest.ini_options]
